Table users {
  id int [pk, increment]
  username varchar(50) [not null]
  email varchar(100) [not null, unique]
  password varchar(255) [not null]
  role enum('admin', 'tenant', 'user') [default: 'user']
  business_name varchar(100)
  store_name varchar(100)
  phone varchar(20)
  address text
  status enum('active', 'inactive') [default: 'active']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table categories {
  id int [pk, increment]
  name varchar(100) [not null]
  description text
  icon varchar(50)
  link varchar(100)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table products {
  id int [pk, increment]
  name varchar(200) [not null]
  description text
  long_description text
  price decimal(10,2) [not null]
  image varchar(255)
  stock int [default: 0]
  stock_status enum('available', 'limited', 'sold-out') [default: 'available']
  category_id int
  discount varchar(10)
  whatsapp varchar(255)
  created_by int
  likes_count int [default: 0]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table comments {
  id int [pk, increment]
  product_id int [not null]
  user_id int
  name varchar(100) [not null]
  email varchar(100) [not null]
  comment text [not null]
  rating int [default: 5]
  comment_type enum('comment', 'review') [default: 'comment']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table orders {
  order_id varchar(50) [pk]
  user_id int
  customer_name varchar(100) [not null]
  total decimal(10,2) [not null]
  status enum('pending', 'accepted', 'rejected', 'completed') [default: 'pending']
  rejection_reason text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table order_items {
  id int [pk, increment]
  order_id varchar(50) [not null]
  product_id int [not null]
  quantity int [not null]
  price decimal(10,2) [not null]
  status enum('pending', 'accepted', 'rejected', 'completed', 'confirmed') [default: 'pending']
}

Table likes {
  id int [pk, increment]
  user_id int [not null]
  product_id int [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table notifications {
  id int [pk, increment]
  type enum('like', 'comment', 'review', 'order') [not null]
  tenant_id int [not null]
  product_id int
  order_id varchar(50)
  message text [not null]
  data json
  read_status boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table contacts {
  id int [pk, increment]
  name varchar(100) [not null]
  email varchar(100) [not null]
  subject varchar(200)
  message text
  status enum('new', 'read', 'replied') [default: 'new']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table carousel_items {
  id int [pk, increment]
  title varchar(200) [not null]
  description text
  image varchar(255) [not null]
  active boolean [default: true]
  display_order int [default: 1]
  button_text varchar(50)
  button_link varchar(255)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// Relationships
Ref: products.category_id > categories.id
Ref: products.created_by > users.id
Ref: comments.product_id > products.id
Ref: comments.user_id > users.id
Ref: orders.user_id > users.id
Ref: order_items.order_id > orders.order_id
Ref: order_items.product_id > products.id
Ref: likes.user_id > users.id
Ref: likes.product_id > products.id
Ref: notifications.tenant_id > users.id
Ref: notifications.product_id > products.id
Ref: notifications.order_id > orders.order_id